<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ModificarProductes.FragmentModificarProductes">


        <EditText
            android:id="@+id/editTextNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nom"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextPreu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/preu"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/editTextNom"
            app:layout_constraintTop_toBottomOf="@+id/editTextNom" />

        <Button
            android:id="@+id/buttonModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modificar"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonEliminar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonEliminar" />

        <Button
            android:id="@+id/buttonEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="6dp"
            android:text="@string/eliminar"
            app:layout_constraintEnd_toStartOf="@+id/buttonModificar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPreu" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>