<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AfegirProductes.AfegirProductesFragment">


        <EditText
            android:id="@+id/editTextNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="89dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nom"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextPreu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/preu"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/editTextNom"
            app:layout_constraintTop_toBottomOf="@+id/editTextNom" />

        <Button
            android:id="@+id/buttonAfegir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="3dp"
            android:text="@string/afegir"
            app:layout_constraintEnd_toEndOf="@+id/editTextPreu"
            app:layout_constraintTop_toBottomOf="@+id/editTextPreu" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>